--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -2,9 +2,10 @@ FROM golang:latest
 
 RUN go get -u github.com/gorilla/mux
 
-WORKDIR /app
+RUN go version
 
-COPY . .
+COPY . "/go/src/github/mtekeli/go-micro/app/backend"
+WORKDIR /go/src/github/mtekeli/go-micro/app/backend
 
 RUN go build -o primeNumberService
 
