add logger and print host name

--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,11 +1,12 @@
 FROM golang:latest
 
 RUN go get -u github.com/gorilla/mux
+RUN go get -u github.com/apsdehal/go-logger
 
 RUN go version
 
-COPY . "/go/src/github/mtekeli/go-micro/app/frontend"
-WORKDIR /go/src/github/mtekeli/go-micro/app/frontend
+COPY . "/go/src/github.com/mtekeli/go-micro/app/frontend"
+WORKDIR /go/src/github.com/mtekeli/go-micro/app/frontend
 
 RUN go build -o webApp
 
