--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,11 +1,12 @@
 FROM golang:latest
 
 RUN go get -u github.com/gorilla/mux
+RUN go get -u github.com/apsdehal/go-logger
 
 RUN go version
 
-COPY . "/go/src/github/mtekeli/go-micro/app/backend"
-WORKDIR /go/src/github/mtekeli/go-micro/app/backend
+COPY . "/go/src/github.com/mtekeli/go-micro/app/backend"
+WORKDIR /go/src/github.com/mtekeli/go-micro/app/backend
 
 RUN go build -o primeNumberService
 
